<resources>
    <string name="app_name">Promo Message</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_my_display_name">My Display Name</string>
    <string name="text_include_junior">Include \'Junior\'</string>
    <string name="text_immediate_joiner">Immediate Joiner</string>
    <string name="hint_available_from_date">Available from date</string>
    <string name="hint_preview_message">Preview Message</string>
    <string name="hint_send_message">SEND MESSAGE</string>
</resources>